<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App IDs, Keys -->
    <string name="app_name">Shocker</string>
    <string name="facebook_app_id">815758155121484</string>
    <string name="parse_application_id">Q75rBn8HwmuMZuWMdVtpK2tTiRtuG3E89bisjXNN</string>
    <string name="parse_client_key">btpH7ZvJlgw3Y2ZFx7A7JMX6UTDeGGKqq6TdwAVo</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="powered_by">Powered by</string>
    <string name="ramit">Ramit</string>
    <string name="session_invalid_error">Your current session is no longer valid. Please log in again.</string>
    <string name="session_invalid_Friends_List">Your current session is no longer valid.Friends List Failed.. Please log in again.</string>
    <string name="logn_generic_error">Something went wrong. Please retry.</string>
    <string name="device_offline_message">"Your device appears to be offline. Some content may be unavailable."</string>
    <string name="welcome_message">%1$s</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="people">People</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>
    <string name="desc">Shock Your Friends And Family</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="rounded">See Rounded</string>
    <string name="squared">See Squared</string>
    <string name="no_photos">No Photo Stream Was Found</string>
    <string name="title_activity_people">PeopleActivity</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="title_activity_terms">TermsActivity</string>
    <string name="title_activity_user_photo">UserPhotoActivity</string>
    <string name="photo_description">Description</string>
    <string name="photo_comment">Comment</string>
    <string name="refresh">Refresh</string>
    <string name="select">Select A Friend</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="send_request">Send Request</string>
    <string name="title_activity_activity_view">ActivityView</string>
    <string name="edit_photo">Edit</string>
    <string name="delete_photo">Delete</string>
    <string name="share_photo">Share</string>
    <string name="friends">Friends</string>
    <string name="account">Accounts</string>
    <string name="info">Info</string>
    <string name="face_radio">Facebook</string>
    <string name="google_plus_radio">Google+</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="requests">Requests</string>
    <string name="terms">Legal and Privacy</string>
    <string name="or">OR</string>
    <string name="explore">Explore Photos</string>
    <string name="title_activity_shock">Shock Capture</string>
    <string name="title_activity_edit_feed_photo">Edit Photo</string>
    <string name="title_activity_edit_account">EditAccountActivity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="fqa">FQA</string>
    <string name="help">Help</string>
    <string name="notification">Notification</string>
    <string name="feedback">Send Feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="app">Application</string>
    <string name="push">Push</string>
    <string name="about">About</string>
    <string name="app_ver">App version</string>
    <string name="ver">0.7.0 beta</string>\
    <string name="contact">Contact us</string>
    <string name="quest">Questions? Need help?</string>
    <string name="title_activity_help">Help</string>
    <string name="appbar_Sheet_view_behavior">android.support.design.widget.BottomSheetBehavior</string>

    <!-- string array  -->
    <string-array name="legal_privacy">
        <item>Terms of Service</item>
        <item>Privacy Policy</item>
        <item>Open Source</item>

    </string-array>

    <string-array name="send_Feedback">
        <item>Tell us what you like</item>
        <item>Report a bug</item>

    </string-array>
    <string name="shared_fab_toolbar">"shock:fab:toolbar</string>
    <string name="title_activity_activity_view_sock">Shock Photos</string>
    <string name="duplicate">DUPLICATE</string>
    <string name="schedule">SCHEDULE</string>
    <string name="delete">DELETE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
