<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.example.tal.shocker.view.HelpActivity">
    <ScrollView
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/StartTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/helpLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/StartTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>




        <TextView
            android:id="@+id/fqa"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:paddingStart="@dimen/profile_text_standard_margin_left"
            android:paddingEnd="@dimen/profile_text_standard_margin_right"
            android:textSize="18sp"
            android:text="@string/fqa"
            android:textColor="@color/black"
            android:background="@drawable/button_rect_list"
            android:paddingTop="23dp"

            />
        <View
            android:layout_width="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_height="1dp"
            android:background="@color/cpb_grey"
            />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:orientation="horizontal" >

        <TextView

            android:id="@+id/contact"
            android:textColor="@color/black"

            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/button_rect_list"
            android:paddingStart="@dimen/profile_text_standard_margin_left"
            android:paddingEnd="@dimen/profile_text_standard_margin_right"
            android:textSize="17sp"
            android:text="@string/contact"


            />
        <TextView
            android:id="@+id/quest"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="25dp"
            android:paddingStart="@dimen/profile_text_standard_margin_left"
            android:paddingEnd="@dimen/profile_text_standard_margin_right"
            android:textSize="15sp"
            android:text="@string/quest"


            />
</RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="15dp"
            android:layout_height="1dp"
            android:background="@color/cpb_grey"
            />


 </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
